tests/bad/field_type_undef.oc
/// fail: Couldn't find this identifier: MadeUp

struct Anything {
    a: MadeUp
}
